--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		"role": "Developer"
 	}]
 	,"require": {"mage2pro/core": "^2.0.17", "mage2pro/ginger-payments-sdk": "^1.2.9"}
-	,"autoload": {"files": ["registration.php"], "psr-4": {"Dfe\\GingerPaymentsBase\\": ""}}
+	,"autoload": {"files": ["registration.php"], "psr-4": {"Df\\GingerPaymentsBase\\": ""}}
 	,"keywords": [
 		"3D Secure"
 		,"API"
