--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"homepage": "https://mage2.pro/users/dmitry_fedyuk",
 		"role": "Developer"
 	}]
-	,"require": {"mage2pro/core": "^2.0.32", "mage2pro/ginger-payments-sdk": "^1.3.1"}
+	,"require": {"mage2pro/core": "^2.0.32", "mage2pro/ginger-payments-sdk": ">=1.3.1"}
 	,"autoload": {"files": ["registration.php"], "psr-4": {"Df\\GingerPaymentsBase\\": ""}}
 	,"keywords": [
 		"3D Secure"
