--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
 	,"keywords": [
 		"3D Secure"
 		,"API"
+		,"Bancontact"
 		,"Bank card"
 		,"Belgium"
 		,"Credit card"
 		,"eCommerce"
+		,"Germany"
 		,"Ginger Payments"
 		,"iDEAL"
 		,"ING Bank"
@@ -33,5 +35,6 @@
 		,"Payment integration"
 		,"Payment gateway"
 		,"Refund"
+		,"SOFORT"
 	]
 }
