--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
 	,"homepage": "https://mage2.pro/c/extensions"
 	,"license": "proprietary"
 	,"authors": [{
-		"name": "Dmitry Fedyuk",
+		"name": "Dmitrii Fediuk",
 		"email": "admin@mage2.pro",
-		"homepage": "https://mage2.pro/users/dmitry_fedyuk",
+		"homepage": "https://www.upwork.com/fl/mage2pro",
 		"role": "Developer"
 	}]
 	,"require": {"guzzlehttp/guzzle": ">=3.1.0", "mage2pro/core": ">=2.12.6"}
