--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	,"authors": [{
 		"name": "Dmitrii Fediuk",
 		"email": "admin@mage2.pro",
-		"homepage": "https://www.upwork.com/fl/mage2pro",
+		"homepage": "https://upwork.com/fl/mage2pro",
 		"role": "Developer"
 	}]
 	,"require": {"guzzlehttp/guzzle": ">=3.1.0", "mage2pro/core": ">=9.0.4"}
